opam-version: "2.0"
name: "certicoq-block"
version: "1.0"
maintainer: "appliedfm"
homepage: "https://github.com/appliedfm/coq-certicoq-block"
dev-repo: "git+https://github.com/appliedfm/coq-certicoq-block.git"
bug-reports: "https://github.com/appliedfm/coq-certicoq-block/issues"
license: "https://github.com/appliedfm/coq-certicoq-block/blob/main/LICENSE"
authors: ["Tim Carstens" "appliedfm"]
build: []
install: [
    make "install-src"
]
depends: [
    "coq-vsu"
    "coq-vsu-int_or_ptr-src"
]
synopsis: "CertiCoq data blocks"
description: """certicoq-block

Formally specified functions for working with CertiCoq data blocks, implemented in C and proven in Coq. Powered by VST.
"""